Updated Resume and Contents

--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 author:
   name             : "Shrikant Arvavasu"
   avatar           : "/images/photo.png"
-  bio              : "Graduate Student / Researcher"
-  location         : "University of Michigan" # "MI, USA"
+  bio              : "MS in ECE, Focusing on Computer Vision and ML"
+  location         : "Ann Arbor, MI, USA" # "MI, USA"
   employer         : "University of Michigan"
   github           : "ashrikant39"
   linkedin         : "shrikant-arvavasu-b8a14b198"
