Updated LinkedIn URL

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ footer:
       url: "https://github.com/ashrikant39"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/shrikant-arvavasu-b8a14b198/"
+      url: "https://www.linkedin.com/in/ashrikant39/"
 
 
 # Defaults
